--- a/Blainnflare.vcxproj
+++ b/Blainnflare.vcxproj
@@ -138,6 +138,7 @@
   <ItemGroup>
     <ClInclude Include="Blainn\pch.h" />
     <ClInclude Include="Blainn\src\Core\Application.h" />
+    <ClInclude Include="Blainn\src\Core\GameTimer.h" />
     <ClInclude Include="Blainn\src\Core\Window.h" />
     <ClInclude Include="Blainn\src\Core\DXSwapChain.h" />
     <ClInclude Include="Blainn\src\DX12\DXDevice.h" />
@@ -149,6 +150,7 @@
     <ClCompile Include="Blainn\pch.cpp" />
     <ClCompile Include="Blainn\src\Core\Application.cpp" />
     <ClCompile Include="Blainn\src\Core\DXSwapChain.cpp" />
+    <ClCompile Include="Blainn\src\Core\GameTimer.cpp" />
     <ClCompile Include="Blainn\src\Core\Window.cpp" />
     <ClCompile Include="Blainn\src\DX12\DXDevice.cpp" />
     <ClCompile Include="Blainn\src\Util\Util.cpp" />
