--- a/Blainn/Blainnflare.vcxproj
+++ b/Blainn/Blainnflare.vcxproj
@@ -73,6 +73,10 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)bin-int\$(Platform)\$(Configuration)\</IntDir>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -108,8 +112,10 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>false</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <PrecompiledHeader>NotUsing</PrecompiledHeader>
-      <PrecompiledHeaderFile>$(SolutionDir)Blainn\pch.h</PrecompiledHeaderFile>
+      <PrecompiledHeader>Create</PrecompiledHeader>
+      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <AdditionalIncludeDirectories>$(SolutionDir)Blainn\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <ForcedIncludeFiles>pch.h</ForcedIncludeFiles>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -136,22 +142,32 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Blainn\pch.h" />
-    <ClInclude Include="Blainn\src\Core\Application.h" />
-    <ClInclude Include="Blainn\src\Core\Window.h" />
-    <ClInclude Include="Blainn\src\Core\DXSwapChain.h" />
-    <ClInclude Include="Blainn\src\DX12\DXDevice.h" />
-    <ClInclude Include="Blainn\src\Util\d3dx12.h" />
-    <ClInclude Include="Blainn\src\Util\Util.h" />
+    <ClInclude Include="src\DX12\DXContext.h" />
+    <ClInclude Include="src\pch.h" />
+    <ClInclude Include="src\Core\Application.h" />
+    <ClInclude Include="src\Core\Events\ApplicationEvent.h" />
+    <ClInclude Include="src\Core\Events\KeyEvent.h" />
+    <ClInclude Include="src\Core\Events\MouseEvent.h" />
+    <ClInclude Include="src\Core\GameTimer.h" />
+    <ClInclude Include="src\Core\KeyCodes.h" />
+    <ClInclude Include="src\Core\Window.h" />
+    <ClInclude Include="src\DX12\DXSwapChain.h" />
+    <ClInclude Include="src\DX12\DXDevice.h" />
+    <ClInclude Include="src\Renderer\RenderContext.h" />
+    <ClInclude Include="src\Util\d3dx12.h" />
+    <ClInclude Include="src\Util\Util.h" />
+    <ClInclude Include="src\Core\Events\Event.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Blainn\EntryPoint.cpp" />
-    <ClCompile Include="Blainn\pch.cpp" />
-    <ClCompile Include="Blainn\src\Core\Application.cpp" />
-    <ClCompile Include="Blainn\src\Core\DXSwapChain.cpp" />
-    <ClCompile Include="Blainn\src\Core\Window.cpp" />
-    <ClCompile Include="Blainn\src\DX12\DXDevice.cpp" />
-    <ClCompile Include="Blainn\src\Util\Util.cpp" />
+    <ClCompile Include="src\EntryPoint.cpp" />
+    <ClCompile Include="src\pch.cpp" />
+    <ClCompile Include="src\Core\Application.cpp" />
+    <ClCompile Include="src\DX12\DXSwapChain.cpp" />
+    <ClCompile Include="src\Core\GameTimer.cpp" />
+    <ClCompile Include="src\Core\Window.cpp" />
+    <ClCompile Include="src\DX12\DXDevice.cpp" />
+    <ClCompile Include="src\Renderer\RenderContext.cpp" />
+    <ClCompile Include="src\Util\Util.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
