--- a/Blainn/Blainnflare.vcxproj
+++ b/Blainn/Blainnflare.vcxproj
@@ -148,8 +148,11 @@
     <ClInclude Include="src\Core\LayerStack.h" />
     <ClInclude Include="src\Core\UUID.h" />
     <ClInclude Include="src\DX12\DXBuffer.h" />
+    <ClInclude Include="src\DX12\DXPipeline.h" />
     <ClInclude Include="src\DX12\DXRenderingContext.h" />
     <ClInclude Include="src\DX12\DXResourceManager.h" />
+    <ClInclude Include="src\DX12\DXShader.h" />
+    <ClInclude Include="src\DX12\DXUploadBuffer.h" />
     <ClInclude Include="src\ImGui\ImGuiLayer.h" />
     <ClInclude Include="src\pch.h" />
     <ClInclude Include="src\Core\Application.h" />
@@ -163,6 +166,7 @@
     <ClInclude Include="src\DX12\DXDevice.h" />
     <ClInclude Include="src\Util\ComboboxSelector.h" />
     <ClInclude Include="src\Util\d3dx12.h" />
+    <ClInclude Include="src\Util\MathHelper.h" />
     <ClInclude Include="src\Util\Util.h" />
     <ClInclude Include="src\Core\Events\Event.h" />
   </ItemGroup>
@@ -174,6 +178,7 @@
     <ClCompile Include="src\DX12\DXGraphicsPrimitive.cpp" />
     <ClCompile Include="src\DX12\DXRenderingContext.cpp" />
     <ClCompile Include="src\DX12\DXResourceManager.cpp" />
+    <ClCompile Include="src\DX12\DXShader.cpp" />
     <ClCompile Include="src\EntryPoint.cpp" />
     <ClCompile Include="src\ImGui\ImGuiLayer.cpp" />
     <ClCompile Include="src\pch.cpp" />
@@ -183,7 +188,13 @@
     <ClCompile Include="src\Core\Window.cpp" />
     <ClCompile Include="src\DX12\DXDevice.cpp" />
     <ClCompile Include="src\Util\ComboboxSelector.cpp" />
+    <ClCompile Include="src\Util\MathHelper.cpp" />
     <ClCompile Include="src\Util\Util.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\Shaders\color.hlsl">
+      <FileType>Document</FileType>
+    </None>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
