--- a/Games/Pong/Pong.vcxproj.filters
+++ b/Games/Pong/Pong.vcxproj.filters
@@ -21,12 +21,24 @@
     <ClCompile Include="src\PongLayer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Actors\PlayerRacket.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Actors\Ball.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="src\Shaders\color.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\PongLayer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Actors\PlayerRacket.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Actors\Ball.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
